[package]
name = "appcues-incr"
version = "0.1.0"
authors = ["Carlos Melo <cmelo@avantstay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
config = "0.11"
itertools = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.11"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate"] }
tokio = { version = "1.5", features = ["macros"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"

[[bench]]
name = "increment_bench"
harness = false